Playing with Java AST (and with wordle)