@@ -97,6 +97,9 @@
           <version>3.11.0</version>
           <configuration>
             <release>21</release>
+            <compilerArgs>
+              <compilerArg>--enable-preview</compilerArg>
+            </compilerArgs>
           </configuration>
         </plugin>
         <plugin>
